syntax = "proto3";

package syft.core.common;

message RecursiveSerde {
  bytes data = 1;
  string fully_qualified_name = 2;
}